# oncoreg

./: LICENSE  README.md  __init__.py  pyproject.toml
oncoreg/: aggregation.py  data.py  scoring.py
